starting Photosharing wiki page
git-svn-id: https://exo-utilities.googlecode.com/svn@8 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/wiki/PhotoSharing.wiki
+++ b/wiki/PhotoSharing.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-The Photo Sharing is a portlet that allow you to ...
+The Photo Sharing is a portlet that allow you can share some photos by upload from local or image's URI.
 
 
 = Feature list =
